--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -30,7 +30,7 @@ framework:
     session:
         # handler_id set to null will use default session handler from php.ini
         handler_id:  ~ 
-        name: '%session.name%'
+        name: '%session_name%'
         cookie_lifetime: 0 
     fragments:       ~
     http_method_override: true
@@ -61,20 +61,20 @@ doctrine:
         default_connection: install
         connections:
             normal: 
-                driver:   pdo_mysql
-                host:     "%database_host%"
-                port:     "%database_port%"
-                dbname:   "%database_name%"
-                user:     "%database_user%"
-                password: "%database_password%"
-                charset: utf8mb4
+                driver:    pdo_mysql
+                host:      "%database_host%"
+                port:      "%database_port%"
+                dbname:    "%database_name%"
+                user:      "%database_user%"
+                password:  "%database_password%"
+                charset:   utf8mb4
                 default_table_options:
                     charset: utf8mb4
                     collate: utf8mb4_unicode_ci   
             install:
                 driver:  pdo_sqlite
                 memory:  true
-                charset: utf8  
+                charset: utf8mb4
         # if using pdo_sqlite as your database driver:
         #   1. add the path in parameters.yml
         #     e.g. database_path: "%kernel.root_dir%/data/data.db3"
@@ -84,8 +84,13 @@ doctrine:
 
     orm:
         auto_generate_proxy_classes: "%kernel.debug%"
-        naming_strategy: doctrine.orm.naming_strategy.underscore
-        auto_mapping: true
+        entity_managers:
+            default:
+                connection: install
+                auto_mapping: true 
+            dynamic:
+                connection: normal   
+
 # Swiftmailer Configuration
 swiftmailer:
     transport: "%mailer_transport%"
