--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -35,10 +35,10 @@ security:
         dev:
             pattern: ^/(_(profiler|wdt|error)|css|images|js)/
             security: false
-#        main:
-#            pattern: ^(/install/|/)
-#            security:    false
-#            anonymous:    true
+        main:
+            pattern: ^(/system/install/|/)
+            security:    false
+            anonymous:    true
         default: 
             pattern: ^/.{1,}
             form_login:
@@ -56,7 +56,7 @@ security:
             remember_me:
                 secret:   "%secret%"
                 lifetime: 86400 # one day in seconds 
-                name:     "%session.remember_me.name%"
+                name:     "%session_remember_me_name%"
                 secure:   true
                 domain: ~
                 always_remember_me: true
@@ -68,7 +68,7 @@ security:
 
     access_control: 
         - { path: busybee_security_login, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: start_install, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/system/install/, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/(_(profiler|wdt)|css|images|js)/, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/admin, role: ROLE_ADMIN }
  
