--- a/src/Busybee/SystemBundle/Resources/config/doctrine/Setting.orm.yml
+++ b/src/Busybee/SystemBundle/Resources/config/doctrine/Setting.orm.yml
@@ -2,15 +2,15 @@
 Busybee\SystemBundle\Entity\Setting:
     type: entity
     table: system_setting
-    repositoryClass: Busybee\SystemBundle\Entity\SystemRepository
+    repositoryClass: Busybee\SystemBundle\Entity\SettingRepository
     constraints:
         - Symfony\Bridge\Doctrine\Validator\Constraints\UniqueEntity: 
-            fields: [email]
-            errorPath: email
-            message: 'The EMail must be unique.'
+            fields: [name]
+            errorPath: name
+            message: 'The Setting Name must be unique.'
     indexes:
-        username:
-            columns: [ username ] 
+        type:
+            columns: [ type, name ] 
     id:
         id:
             type: integer
@@ -19,78 +19,23 @@ Busybee\SystemBundle\Entity\Setting:
     fields:
         type:
             type: string
-            length: 64
+            length: 25
+        name:
+            type: string
+            length: 25
             unique: true
-        usernameCanonical:
-            type: string
-            length: 64
-            unique: true
-            column: username_canonical
-        email:
-            type: string
-            length: 64
-            unique: true
-        emailCanonical:
-            type: string
-            length: 64
-            unique: true       
-            column: email_canonical
-        enabled:
-            type: boolean
-        locale:
-            type: string
-            length: 10
-        password:
-            type: string
-            length: 64 
-        lastLogin:
-            column: last_login
+        value:
+            type: blob
+        lastModified:
             type: datetime
-            nullable: true
-        locked:
-            type: boolean
-        expired:
-            type: boolean
-        expiresAt:
-            column: expires_at
+        createdOn:
             type: datetime
-            nullable: true
-        confirmationToken:
-            type: string
-            column: confirmation_token
-            nullable: true 
-        passwordRequestedAt:
-            column: password_requested_at
-            type: datetime
-            nullable: true
-        credentialsExpired:
-            type: boolean 
-            column: credentials_expired
-        credentialsExpireAt:
-            column: credentials_expire_at
-            type: datetime
-            nullable: true
-    manyToMany:
-        groups:
-            targetEntity: Busybee\SecurityBundle\Entity\Group
-            nullable: true
-            joinTable:
-                name: secure_users_to_groups
-                joinColumns:
-                    user_id:
-                        referencedColumnName: id
-                inverseJoinColumns:
-                    group_id:
-                        referencedColumnName: id
-        directroles:
-            targetEntity: Busybee\SecurityBundle\Entity\Role
-            nullable: true 
-            joinTable:
-                name: secure_users_to_roles
-                joinColumns:
-                    user_id:
-                        referencedColumnName: id
-                inverseJoinColumns:
-                    role_id:
-                        referencedColumnName: id
-
+    manyToOne:
+        user:
+            targetEntity: Busybee\SecurityBundle\Entity\User
+            joinColumns:
+                user_id:
+                    referencedColumnName: id
+    lifecycleCallbacks:
+        prePersist: [ updateLastModified ]
+        preUpdate: [ updateLastModified ]
