--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,7 @@
+busybee_form:
+    resource: "@BusybeeFormBundle/Resources/config/routing.yml"
+    prefix:   /form
+
 system:
     resource: "@SystemBundle/Resources/config/routing.yml"
     prefix:   /system/
