--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -86,7 +86,7 @@ doctrine:
         auto_generate_proxy_classes: "%kernel.debug%"
         entity_managers:
             default:
-                connection: install
+                connection: normal
                 auto_mapping: true 
             dynamic:
                 connection: normal   
