--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -6,17 +6,17 @@ system:
     resource: "@SystemBundle/Resources/config/routing.yml"
     prefix:   /system/
 
-busybee_record:
-    resource: "@BusybeeRecordBundle/Resources/config/routing.yml"
-    prefix:   /record/
+#busybee_record:
+#    resource: "@BusybeeRecordBundle/Resources/config/routing.yml"
+#    prefix:   /record/
 
 busybee_pagination:
     resource: "@BusybeePaginationBundle/Resources/config/routing.yml"
     prefix:   /pagination/
 
-busybee_database:
-    resource: "@BusybeeDatabaseBundle/Resources/config/routing.yml"
-    prefix:   /database/
+#busybee_database:
+#    resource: "@BusybeeDatabaseBundle/Resources/config/routing.yml"
+#    prefix:   /database/
 
 general_image:
     resource: "@BusybeeImageBundle/Resources/config/routing.yml"
