--- a/src/Busybee/SystemBundle/Resources/config/services.yml
+++ b/src/Busybee/SystemBundle/Resources/config/services.yml
@@ -1,1 +1,15 @@
 services:
+    monolog.formatter.session_request:
+        class: Monolog\Formatter\LineFormatter
+        arguments:
+            - "[%%datetime%%] [%%extra.token%%] %%channel%%.%%level_name%%: %%message%% %%context%% %%extra%%\n"
+    monolog.processor.session_request:
+        class: Busybee\SystemBundle\Model\SessionRequestProcessor
+        arguments:  ["@session"]
+        tags:
+            - { name: monolog.processor, method: processRecord }
+    monolog.logger.busybee:
+        class: Busybee\SystemBundle\Model\BusybeeLogger 
+        arguments: ['@logger']
+        tags:
+            - { name: monolog.logger, channel: busybee }
