Move Database Prefix Listener

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -2,30 +2,14 @@ busybee_form:
     resource: "@BusybeeFormBundle/Resources/config/routing.yml"
     prefix:   /form
 
-system:
+busybee_system:
     resource: "@SystemBundle/Resources/config/routing.yml"
     prefix:   /system/
 
-#busybee_record:
-#    resource: "@BusybeeRecordBundle/Resources/config/routing.yml"
-#    prefix:   /record/
-
-busybee_pagination:
-    resource: "@BusybeePaginationBundle/Resources/config/routing.yml"
-    prefix:   /pagination/
-
-#busybee_database:
-#    resource: "@BusybeeDatabaseBundle/Resources/config/routing.yml"
-#    prefix:   /database/
-
-general_image:
-    resource: "@BusybeeImageBundle/Resources/config/routing.yml"
-    prefix:   /image/
-
-general_display:
+busybee_home:
     resource: "@BusybeeHomeBundle/Resources/config/routing.yml"
     prefix:   /
 
-general_security:
+busybee_security:
     resource: "@BusybeeSecurityBundle/Resources/config/routing.yml"
     prefix:   /security/
