--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,8 @@
         "doctrine/doctrine-fixtures-bundle": "^2.3",
         "symfony/intl": "^3.0",
         "symfony/console": "^3.0",
-        "imsky/holder": "^2.9"
+        "imsky/holder": "2.9.*",
+        "vsn4ik/bootstrap-submenu": "2.0.*"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
