Pagination and User List and User Enable Toggle

--- a/src/Busybee/SecurityBundle/Resources/config/routing.yml
+++ b/src/Busybee/SecurityBundle/Resources/config/routing.yml
@@ -68,3 +68,8 @@ busybee_security_createuser:
 busybee_security_user_reset_check_email:
     path:     /checkemail
     defaults: { _controller: BusybeeSecurityBundle:User:checkEmail }
+busybee_user_toggleEnabled:
+    path:     /user/toggleEnabled/
+busybee_user_toggle_enabled:
+    path:     /user/toggleEnabled/{id}
+    defaults: { _controller: BusybeeSecurityBundle:User:toggleEnabled }
