--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -71,7 +71,9 @@ doctrine:
                 charset:   utf8mb4
                 default_table_options:
                     charset: utf8mb4
-                    collate: utf8mb4_unicode_ci   
+                    collate: utf8mb4_unicode_ci 
+                mapping_types:
+                    enum: string 
             install:
                 driver:  pdo_sqlite
                 memory:  true
@@ -90,7 +92,8 @@ doctrine:
                 connection: normal
                 auto_mapping: true 
             dynamic:
-                connection: normal   
+                connection: normal  
+
 
 # Swiftmailer Configuration
 swiftmailer:
@@ -108,4 +111,9 @@ monolog:
             level: debug
             channels: ['busybee']
             formatter: monolog.formatter.session_request
-            max_files: 7 
+            max_files: '7' 
+        doctrine: 
+            action_level: debug
+            type:  stream
+            path:  '%kernel.logs_dir%/%kernel.environment%_doctrine.log'
+            channels: ['doctrine']
