--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,7 +1,3 @@
-busybee_system:
-    resource: "@SystemBundle/Resources/config/routing.yml"
-    prefix:   /system/
-
 busybee_home:
     resource: "@BusybeeHomeBundle/Resources/config/routing.yml"
     prefix:   /
@@ -9,3 +5,12 @@ busybee_home:
 busybee_security:
     resource: "@BusybeeSecurityBundle/Resources/config/routing.yml"
     prefix:   /security/
+
+busybee_person:
+    resource: "@BusybeePersonBundle/Resources/config/routing.yml"
+    prefix:   /person/
+
+busybee_system:
+    resource: "@SystemBundle/Resources/config/routing.yml"
+    prefix:   /system/
+
