--- a/src/Busybee/SecurityBundle/Resources/config/doctrine/Role.orm.yml
+++ b/src/Busybee/SecurityBundle/Resources/config/doctrine/Role.orm.yml
@@ -21,6 +21,25 @@ Busybee\SecurityBundle\Entity\Role:
             type: string
             length: 64
             unique: true
+        lastModified:
+            type: datetime
+            nullable: true
+        createdOn:
+            type: datetime
+            nullable: true
+    manyToOne:
+        createdBy:
+            targetEntity: Busybee\SecurityBundle\Entity\User
+            joinColumns:
+                created_by:
+                    referencedColumnName: id
+                    nullable: true
+        modifiedBy:
+            targetEntity: Busybee\SecurityBundle\Entity\User
+            joinColumns:
+                modified_by:
+                    referencedColumnName: id
+                    nullable: true
     manyToMany:
         childrenRoles:
             targetEntity: Busybee\SecurityBundle\Entity\Role
