--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -14,3 +14,6 @@ busybee_system:
     resource: "@SystemBundle/Resources/config/routing.yml"
     prefix:   /system/
 
+busybee_install:
+    path:     /install/
+    defaults: { _controller: SystemBundle:Install:index }
