--- a/src/Busybee/SecurityBundle/Resources/config/doctrine/User.orm.yml
+++ b/src/Busybee/SecurityBundle/Resources/config/doctrine/User.orm.yml
@@ -15,6 +15,10 @@ Busybee\SecurityBundle\Entity\User:
     indexes:
         username:
             columns: [ username ] 
+    properties:
+        email:
+            - Email: ~
+            - NotBlank: ~
     id:
         id:
             type: integer
