--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -29,9 +29,10 @@ framework:
     trusted_proxies: ~
     session:
         # handler_id set to null will use default session handler from php.ini
-        handler_id:  ~ 
+        handler_id:  session.handler.native_file
         name: '%session_name%'
         cookie_lifetime: 0 
+        save_path: '%kernel.root_dir%/var/sessions' 
     fragments:       ~
     http_method_override: true
 
