--- a/src/Busybee/PersonBundle/Resources/config/doctrine/Image.orm.yml
+++ b/src/Busybee/PersonBundle/Resources/config/doctrine/Image.orm.yml
@@ -1,7 +1,7 @@
-Busybee\PersonBundle\Entity\Address:
+Busybee\PersonBundle\Entity\Image:
     type: entity
-    table: person_address
-    repositoryClass: Busybee\PersonBundle\Repository\AddressRepository
+    table: image_store
+    repositoryClass: Busybee\PersonBundle\Repository\ImageRepository
     id:
         id:
             type: integer
@@ -9,19 +9,23 @@ Busybee\PersonBundle\Entity\Address:
             generator:
                 strategy: AUTO
     fields:
-        line1:
+        type:
             type: string
-            length: '50'
-        line2:
+            length: '25'
+        image:
+            type: blob    
+        size:
             type: string
-            length: '50'
-            nullable: true
+            length: '25'
+        name:
+            type: string
+            length: '100'
         lastModified:
             type: datetime
-            nullable: true
+            nullable: true 
         createdOn:
             type: datetime
-            nullable: true
+            nullable: true 
     manyToOne:
         createdBy:
             targetEntity: Busybee\SecurityBundle\Entity\User
@@ -33,11 +37,5 @@ Busybee\PersonBundle\Entity\Address:
             targetEntity: Busybee\SecurityBundle\Entity\User
             joinColumns:
                 modified_by:
-                    referencedColumnName: id
-                    nullable: true
-        locality:
-            targetEntity: Busybee\PersonBundle\Entity\Locality
-            joinColumns:
-                locality_id:
                     referencedColumnName: id
                     nullable: true
