--- a/src/Busybee/PersonBundle/Resources/config/routing.yml
+++ b/src/Busybee/PersonBundle/Resources/config/routing.yml
@@ -1,6 +1,24 @@
-staff_person:
+staff_manage:
     path:     /staff/
     defaults: { _controller: BusybeePersonBundle:Staff:index }
 staff_edit:
     path:     /staff/edit/{id}
     defaults: { _controller: BusybeePersonBundle:Staff:edit }
+person_manage:
+    path:     /
+    defaults: { _controller: BusybeePersonBundle:Person:index }
+person_edit:
+    path:     /edit/{id}
+    defaults: { _controller: BusybeePersonBundle:Person:edit }
+address_check:
+    path:     /address/
+    defaults: { _controller: BusybeePersonBundle:Address:check }
+locality_manage:
+    path:     /locality/{id}
+    defaults: { _controller: BusybeePersonBundle:Locality:index }
+locality_edit:
+    path:     /locality/edit/
+    defaults: { _controller: BusybeePersonBundle:Locality:edit }
+locality_fetch:
+    path:     /locality/fetch/
+    defaults: { _controller: BusybeePersonBundle:Locality:fetch }
