Build of Person Form - In Progress

--- a/src/Busybee/PersonBundle/Resources/config/doctrine/Person.orm.yml
+++ b/src/Busybee/PersonBundle/Resources/config/doctrine/Person.orm.yml
@@ -77,7 +77,7 @@ Busybee\PersonBundle\Entity\Person:
         photo:
             targetEntity: Busybee\PersonBundle\Entity\Image
             joinColumns:
-                address2_id:
+                photo_id:
                     referencedColumnName: id
                     nullable: true
     properties:
