--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,8 @@
         "symfony/intl": "^3.0",
         "symfony/console": "^3.0",
         "imsky/holder": "2.9.*",
-        "vsn4ik/bootstrap-submenu": "2.0.*"
+        "vsn4ik/bootstrap-submenu": "2.0.*",
+        "twig/extensions": "^1.4"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
