--- a/src/Busybee/PersonBundle/Resources/config/services.yml
+++ b/src/Busybee/PersonBundle/Resources/config/services.yml
@@ -44,7 +44,15 @@ parameters:
             - p.surnameaddress.formType
             - p.firstName
             - p.email
-
+    Address:
+        Format: >
+            <pre>
+            {{ line1 }}
+            {% if line2 is not empty %}{{ line2 }}{% endif %}
+            {{ locality }} {{ territory }} {{ postCode }}
+            {{ country }} 
+            </pre>
+    
 services:
     person.repository:
         class: Busybee\PersonBundle\Entity\Repository\PersonRepository
